Implemented digit functionality + Rebase, remove webstorm iml and storybook samples

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
 <div class="content" role="main">
-  <div>Digital</div>
-  <div>Adjust Time Digital</div>
+  <app-digital-clock></app-digital-clock>
   <div>Analog</div>
   <div>Adjust Time Analog</div>
 </div>
