--- a/src/app/components/digit/digit.component.html
+++ b/src/app/components/digit/digit.component.html
@@ -1,9 +1,9 @@
 <div>
-  <div class="top horizontal"></div>
-  <div class="upper left vertical"></div>
-  <div class="upper right vertical"></div>
-  <div class="middle horizontal"></div>
-  <div class="lower left vertical"></div>
-  <div class="lower right vertical"></div>
-  <div class="bottom horizontal"></div>
+  <div class="top horizontal" [ngClass]="{lit:isLit('t')}"></div>
+  <div class="upper left vertical" [ngClass]="{lit:isLit('ul')}"></div>
+  <div class="upper right vertical" [ngClass]="{lit:isLit('ur')}"></div>
+  <div class="middle horizontal" [ngClass]="{lit:isLit('m')}"></div>
+  <div class="lower left vertical" [ngClass]="{lit:isLit('ll')}"></div>
+  <div class="lower right vertical" [ngClass]="{lit:isLit('lr')}"></div>
+  <div class="bottom horizontal" [ngClass]="{lit:isLit('b')}"></div>
 </div>
