Renamed digital clock component. Added analog clock & refactored time service.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
 <div class="content" role="main">
   <app-digital-clock></app-digital-clock>
-  <div>Analog</div>
-  <div>Adjust Time Analog</div>
+  <app-analog-clock></app-analog-clock>
 </div>
