--- a/src/app/clock/analog/analog-clock.component.html
+++ b/src/app/clock/analog/analog-clock.component.html
@@ -3,4 +3,4 @@
   <app-hand class="minutes" [ngStyle]="getTransformation(angles[1])"></app-hand>
   <app-hand class="hours" [ngStyle]="getTransformation(angles[0])"></app-hand>
 </div>
-<app-adjuster [clockType]="'Analog'"></app-adjuster>
+<app-adjuster></app-adjuster>
