--- a/src/app/clock/digital/digital-clock.component.html
+++ b/src/app/clock/digital/digital-clock.component.html
@@ -14,4 +14,4 @@
     <app-digit [digitToDisplay]="digits[5]"></app-digit>
   </div>
 </div>
-<app-adjuster [clockType]="'Digital'"></app-adjuster>
+<app-adjuster></app-adjuster>
